tests/neg/i1708.scala
package foo { trait identifier }
package foo { class identifier } // error
